# rust_3d

./: 235.boundle.js  CHANGELOG.md  Cargo.toml  README.md  index.html  index.js  package.json  webpack.config.js
examples/cube/: index.html
mesh/: Cargo.toml  tree.mesh
mesh/src/: load_mesh.rs  load_obj.rs  main.rs  sort_mesh_tets.rs
src/: animator.rs  body.rs  camera.rs  grid.rs  lib.rs  state.rs  viewer.rs
src/mesh/: mesh_tets.rs  mesh_vertices.rs  mod.rs  obj_faces.rs
v0-1-0/: 235.boundle.js  index.html
