[package]
name = "awatif_engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.55"
wasm-bindgen = "0.2.78"
nalgebra = "0.29.0"
lazy_static = "1.3.0"
console_error_panic_hook = "=0.1.5"

[dependencies.web-sys]
version = "0.3.55"
features = [
  'Window',
  'Performance',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlUniformLocation',
  'EventTarget',
  'PointerEvent',
]